Revert "Fix deprecated GC logging switch (#11395)" (#11436)
This reverts commit 077e5f282cb1f16dd70c7b93cea5c097f93a2c34.